--- a/style.css
+++ b/style.css
@@ -18,3 +18,47 @@ body{
   flex-direction: column;
   height: 100vh;
 }
+.inner-quotes-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 900px;
+    text-align: center;
+    min-height: 400px;
+    padding: 0 25px;
+    color: rgb(197, 248, 255);
+    border-radius: 10px;
+    background-color: #F4EDEA;
+    border: 10px solid #6b4794;
+    box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.9); 
+  }
+  
+  .inner-quotes-container p{
+    font-size: 1.5rem;
+    color: black;
+  }
+  
+  .inner-quotes-container h3{
+    font-size: 2rem;
+    color: black;
+    font-family: 'Dancing Script', cursive;
+  }
+  
+  .quote-btn{
+      padding-top: 25px;
+      
+    }
+  
+  @media(max-width:1280px){
+    .container{width: 95%;}
+  }
+  
+  @media(max-width:900px){
+    .inner-quotes-container{width: 100%;}
+  }
+  
+  @media(max-width:480px){
+    .inner-quotes-container p{font-size: 1.2rem;}
+    .inner-quotes-container h3{font-size: 1.5rem;}
+  }
